--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Home</title>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width" />
-<link rel="stylesheet" href="src/css/style.css" />
+<link rel="stylesheet" href="assets/css/style.css" />
 <!-- font awsome -->
 <script
 src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/js/all.min.js"
@@ -67,6 +67,6 @@ referrerpolicy="no-referrer"
   <div class="contents">中身</div>
 </details>
 
-<script src="src/js/script.js"></script>
+<script src="assets/js/script.js"></script>
 </body>
 </html>
